# MEAM6230-FinalProj-EEG-DSModulation

./: .gitignore  README.md  eeg_speed.py
cortex-example/python/: sub_data.py
cortex_eeg_module/: README.md
cortex_eeg_module/scripts/: attention_level_publisher.py  band_power_helpers.py  check_data_labels.py  config.py  data_band_powers_plotter.py  data_plotter.py  demo_sub_data_band_powers_publisher.py  sub_data.py  sub_data_band_powers_publisher.py  sub_data_eeg_publisher.py  sub_data_met_publisher.py  sub_data_pow_publisher.py  sub_data_publisher.py
cortex_eeg_module/scripts/archive/: config.py  (+3 more)
docs/: data_subscription.md  emotiv_research_info.md  performance_metrics.md
gazebo_simulation_and_control/: CMakeLists.txt  Dockerfile  Readme.md  run_a_demo.sh  run_a_demo_outside.sh  run_docker.sh  run_full_demo_DS_mod.sh
gazebo_simulation_and_control/camera/: CMakeLists.txt  package.xml
gazebo_simulation_and_control/flo_humanoid/: readme.md
gazebo_simulation_and_control/movewithhead/: .setup_assistant  CMakeLists.txt  package.xml
gazebo_simulation_and_control/movewithhead/config/: fake_controllers.yaml  flov2withhead.srdf  ompl_planning.yaml  stomp_planning.yaml
gazebo_simulation_and_control/movewithhead/launch/: full_robot_arm_sim_with_ds.launch  gazebo.launch
gazebo_simulation_and_control/movewithhead/script/: arm_control.py  dualPosition.py  modulation_input_publisher.py  moveit_ds_modulation_executor.py  movementClass.py  run_a_demo.py  subscriber_apriltag.py  test.py  testnew.py
gazebo_simulation_and_control/movewithhead/src/: dummy_node.cpp
(+18 files in other folders)
